fixed more responsiveness on mobile navbar and removed scrollbar under mentors

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #666;
-
+  background: #555;
+  border: 2px solid transparent;
+  background-clip: padding-box;
 }
